<resources>
    <string name="app_name">SDPVocabQuiz</string>
    <string name="welcome_to_sdpvocab_banner">Welcome to SDPVocab</string>
    <string name="user_name">Username:</string>
    <string name="new_user">New User?</string>
    <string name="register_btn">Register</string>
    <string name="username">Username:</string>
    <string name="register_a_new_user_banner">Register a new user</string>
    <string name="seniority">Seniority</string>
    <string name="email">Email:</string>
    <string name="major_subject">Major:</string>
    <string name="freshman_radio_btn">Freshman</string>
    <string name="sophomore_radio_btn">Sophomore</string>
    <string name="junior_radio_btn">Junior</string>
    <string name="senior_radio_btn">Senior</string>
    <string name="grad_radio_btn">Grad</string>
    <string name="email_label">Email:</string>
    <string name="quiz_main_menu_banner">Main Menu</string>
    <string name="add_a_quiz">Add a quiz</string>
    <string name="remove_a_quiz_you_created">Remove a quiz you created</string>
    <string name="practise_a_quiz_by_another_student">Practise a quiz by another student</string>
    <string name="view_list_of_quiz_score_statistics">View list of quiz score statistics</string>
    <string name="login_btn">Login</string>
    <string name="create_a_quiz_banner">Create Quiz</string>
    <string name="quiz_name">Quiz Name:</string>
    <string name="description">Description:</string>
    <string name="number_of_quiz_words">Number of words:</string>
    <string name="add_a_word_banner">Add a word</string>
    <string name="word">Word</string>
    <string name="correct_definition">Correct Definition:</string>
    <string name="create_quiz_btn">Create Quiz</string>
    <string name="incorrect_definition1">Incorrect Definition:</string>
    <string name="incorrect_definition2">Incorrect Definition:</string>
    <string name="incorrect_definition3">Incorrect Definition:</string>
    <string name="add_word_btn">Add Word</string>
    <string name="finish">Finish</string>
    <string name="quiz_module_test">Quiz Module Test</string>
    <string name="remove_quiz_banner">Remove Quiz</string>
    <string name="select_the_quiz_you_wish_to_remove">Select the quiz you wish to remove:</string>
    <string name="quiz_removal_stats_message">Note: Removing a quiz will also remove the score statistics for that quiz.</string>
    <string name="score_for_quiz_banner">Score for Quiz</string>
    <string name="quiz_score">Score:</string>
    <string name="main_menu_btn">Main Menu</string>
    <string name="statistics_for_username">Statistics for username</string>
    <string name="quizzes_played_by_username">Quizzes played by username</string>
    <string name="quizzes_not_played_by_username">Quizzes not played by username</string>
    <string name="statistics_for_quiz">Statistics for Quiz</string>
    <string name="overall_statistics_for_student_and_quiz">Overall statistics for Student and Quiz:</string>
    <string name="select_the_quiz">Please select a quiz to take:</string>
    <string name="quiz_select_message">You can only select quizzes built by others.</string>
    <string name="confirm_btn">Confirm</string>
    <string name="logout_btn">Logout</string>
    <string name="take_quiz_btn">Take Quiz</string>
    <string name="select_quiz_banner">Select Quiz</string>
    <string name="view_stats_btn">View Stats</string>
    <string name="select_quiz_to_view_statistics">Select quiz to view statistics:</string>
    <string name="practise_quiz">Practise Quiz</string>
    <string name="next_quiz">Next Quiz</string>
    <string name="select_correct_definition">Please select the correct definition:</string>
</resources>

