...
        android:id="@+id/quizMainMenuBannerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/quizMainMenuBanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/border"
            android:contentDescription=""
...
    <RadioGroup
        android:id="@+id/QuizMainMenuRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/addQuizRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@android:color/black"
            android:text="@string/add_a_quiz"
            android:textColorLink="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/removeQuizRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@android:color/black"
            android:text="@string/remove_a_quiz_you_created"
            android:textColorLink="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/practiseQuizRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@android:color/black"
            android:text="@string/practise_a_quiz_by_another_student"
            android:textColorLink="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/viewQuizScoreStatsRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@android:color/black"
            android:text="@string/view_list_of_quiz_score_statistics"
            android:textColorLink="@android:color/black"
            android:textSize="16sp"
...
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            android:contentDescription=""
...
            android:textColor="#000000"
            android:textColorLink="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            android:contentDescription=""
...
