...
        android:id="@+id/addQuizWordBannerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/addQuizWordBanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/border"
            android:contentDescription=""
...
        <TextView
            android:id="@+id/wordLabel"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:contentDescription=""
            android:gravity="center|start"
            android:labelFor="@+id/wordName"
            android:text="@string/word"
            android:textColor="#000000"
            android:textColorLink="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="Word:" />
...
        <TextView
            android:id="@+id/correctDefinitionLabel"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:contentDescription=""
            android:gravity="center|start"
            android:labelFor="@+id/correctDefinition"
            android:text="@string/correct_definition"
            android:textColor="#000000"
            android:textColorLink="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="Correct Definition:" />
...
        <TextView
            android:id="@+id/incorrectDefinition1Label"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:contentDescription=""
            android:gravity="center|start"
            android:labelFor="@+id/incorrectDefinition1"
            android:text="@string/incorrect_definition1"
            android:textColor="#000000"
            android:textColorLink="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="Incorrect Definition:" />
...
        <TextView
            android:id="@+id/incorrectDefinition2Label"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:contentDescription=""
            android:gravity="center|start"
            android:labelFor="@+id/incorrectDefinition2"
            android:text="@string/incorrect_definition2"
            android:textColor="#000000"
            android:textColorLink="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="Incorrect Definition:" />
...
        <TextView
            android:id="@+id/incorrectDefinition3Label"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:contentDescription=""
            android:gravity="center|start"
            android:labelFor="@+id/incorrectDefinition3"
            android:text="@string/incorrect_definition3"
            android:textColor="#000000"
            android:textColorLink="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="Incorrect Definition:" />
...
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        tools:layout_editor_absoluteX="321dp"
        tools:layout_editor_absoluteY="155dp">

        <Button
            android:id="@+id/addWordButton"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:contentDescription=""
            android:text="@string/add_word_btn"
            android:textAllCaps="false"
...
