...
            android:id="@+id/practiseQuizBannerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/practiseQuizBanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@drawable/border"
                android:contentDescription=""
...
                android:id="@+id/selectCorrectDefnRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start">

                <RadioButton
                    android:id="@+id/quizQuestion1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@android:color/black"
                    android:gravity="top"
                    android:scrollHorizontally="false"
                    android:textColorLink="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/quizQuestion2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@android:color/black"
                    android:gravity="top"
                    android:scrollHorizontally="false"
                    android:textColorLink="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/quizQuestion3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@android:color/black"
                    android:gravity="top"
                    android:scrollHorizontally="false"
                    android:textColorLink="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/quizQuestion4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@android:color/black"
                    android:gravity="top"
                    android:scrollHorizontally="false"
                    android:textColorLink="@android:color/black"
...
            android:gravity="top|center_horizontal"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="321dp"
            tools:layout_editor_absoluteY="155dp">

            <Button
                android:id="@+id/nextQuizButton"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:contentDescription=""
                android:text="@string/next_quiz"
                android:textAllCaps="false"
...
